<resources>
    <string name="app_name">Public Identity Provider</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_fingerprint">LOGIN USING FINGERPRINT</string>
    <string name="phone_number">Enter phone number</string>
    <string name="email_address">Enter e-mail address</string>
    <string name="last_name">Enter last name</string>
    <string name="first_name">Enter first name</string>
    <string name="birth_date">Birth date YYYY-MM-DD</string>
    <string name="send_button">SEND</string>
    <string name="display_last_name">Last name</string>
    <string name="display_first_name">First name</string>
    <string name="display_phone_number">Phone number</string>
    <string name="display_email">Email</string>
    <string name="display_birthDate">Birth date</string>
    <string name="display_auth">DISPLAY AUTHORIZED APPS</string>
    <string name="display_waiting">DISPLAY WAITING AUTHORIZATION</string>
    <string name="textView">TextView</string>
    <string name="give_auth">GIVE AUTHORIZATIONS</string>
    <string name="waiting_authorization_list">WAITING AUTHORIZATIONS</string>
    <string name="allowed_authorization_list">ALLOWED AUTHORIZATIONS</string>
</resources>